--- a/account-settings.html
+++ b/account-settings.html
@@ -5,15 +5,30 @@
 <title>Account Settings – Waste2Worth</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.tailwindcss.com"></script>
-
 <style>
 body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
 .sidebar-item:hover { background: #eef3ff; }
 .active-item { background: #e0e7ff !important; font-weight: 600; }
 .shadow-card { box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
 #mobileSidebar { transition: transform 0.3s ease; }
+body.dark-mode, html.dark-mode { background: #101820 !important; color: #eafaf2 !important; }
+body.dark-mode .bg-white, body.dark-mode .bg-gray-50, body.dark-mode .rounded-xl { background: #182430 !important; color: #eafaf2 !important; }
+body.dark-mode .sidebar-item, body.dark-mode aside, body.dark-mode .shadow-card { background: #1b2532 !important; color: #eafaf2 !important; }
+body.dark-mode nav, body.dark-mode .border-b, body.dark-mode .border-r, body.dark-mode aside { background: #151d27 !important; border-color: #29404f !important; }
+body.dark-mode h1, body.dark-mode h2, body.dark-mode h3, body.dark-mode .font-bold, body.dark-mode .font-semibold { color: #4be5bc !important; }
+body.dark-mode .text-gray-500, body.dark-mode .text-gray-400 { color: #b6e0d9 !important; }
+body.dark-mode input, body.dark-mode textarea { background: #203040 !important; color: #eafaf2 !important; border-color: #1e415e !important; }
+body.dark-mode table, body.dark-mode th, body.dark-mode td { background: transparent !important; color: #eafaf2 !important; }
+body.dark-mode .bg-gray-100 { background: #232a39 !important;}
+body.dark-mode .border-gray-200 { border-color: #2a3741 !important;}
+body.dark-mode .bg-gray-200 { background: #23344a !important;}
+body.dark-mode .active-item { background: #203341 !important;}
+body.dark-mode .bg-black\/50 { background: #121820cc !important; }
+body.dark-mode .border, body.dark-mode .border-b, body.dark-mode .border-t { border-color: #203d41 !important; }
+#themeToggle {margin-left: 1rem;}
+#themeToggle:hover { background: #b0ffd5; color: #166244;}
+body.dark-mode #themeToggle:hover { background: #22e28d; color:#1a232d;}
 </style>
-
 </head>
 <body class="text-gray-800">
 
@@ -21,33 +36,24 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
 <nav class="w-full bg-white border-b fixed top-0 left-0 z-50 shadow-sm">
   <div class="max-w-7xl mx-auto px-6">
     <div class="flex items-center justify-between h-16">
-
       <!-- Back Button -->
       <a href="marketplace.html" class="text-sm px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-md flex items-center gap-2">
         ◀ Back to Marketplace
       </a>
-
       <!-- Search -->
       <div class="hidden md:flex items-center w-1/3">
         <input type="text" placeholder="Search settings..." class="w-full px-4 py-2 rounded-md bg-gray-100 border border-gray-200">
       </div>
-
-      <!-- Right Side -->
       <div class="flex items-center gap-6">
-
-        <!-- Notification -->
         <button class="relative">
           <span>🔔</span>
           <span class="absolute -top-1 -right-1 w-3 h-3 bg-red-600 rounded-full"></span>
         </button>
-
-        <!-- Profile -->
         <div class="relative">
           <button id="profileBtn" class="flex items-center gap-2">
-            <img src="https://i.pravatar.cc/150?img=32" class="w-9 h-9 rounded-full">
-            <span class="font-medium">Sam</span>
+            <img src="logos.png" class="w-9 h-9 rounded-full" alt="User Logo">
+            <span class="font-medium">User Login</span>
           </button>
-
           <div id="profileMenu" class="hidden absolute right-0 mt-2 bg-white border rounded-lg shadow-lg w-48">
             <a href="account-settings.html" class="block px-4 py-2 hover:bg-gray-100">Profile Settings</a>
             <a href="account-settings.html" class="block px-4 py-2 hover:bg-gray-100">Account Settings</a>
@@ -55,10 +61,10 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
             <a href="#" class="block px-4 py-2 hover:bg-gray-100 text-red-600">Logout</a>
           </div>
         </div>
-
+        <!-- Light/Dark Theme Toggle Button -->
+        <button id="themeToggle" class="px-3 py-2 rounded-full border text-xl border-green-500 bg-white hover:bg-green-100 focus:outline-none transition" aria-label="Theme Toggle">🌙</button>
         <!-- Sidebar Toggle (Mobile) -->
         <button id="sidebarToggle" class="lg:hidden px-3 py-2 rounded-md bg-gray-100">☰</button>
-
       </div>
     </div>
   </div>
@@ -90,87 +96,92 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
 
 <!-- MAIN CONTENT -->
 <main class="ml-0 lg:ml-64 pt-24 px-6 pb-12">
-
   <h1 class="text-2xl font-bold mb-6">Account & Settings</h1>
-
   <!-- PROFILE SETTINGS -->
   <div class="bg-white p-6 rounded-xl shadow-card mb-6">
     <h2 class="text-xl font-semibold mb-4">Profile Information</h2>
-
     <div class="flex items-center gap-6">
-      <img src="https://i.pravatar.cc/150?img=32" class="w-20 h-20 rounded-full border">
+      <img src="logos.png" class="w-20 h-20 rounded-full border" alt="User Logo">
       <div>
-        <h3 class="text-lg font-semibold">Sam</h3>
-        <p class="text-gray-500">sam@example.com</p>
+        <h3 class="text-lg font-semibold">User Login</h3>
+        <p class="text-gray-500">user@example.com</p>
       </div>
     </div>
-
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-6">
-      <input class="p-3 border rounded-md" placeholder="Full Name" value="Sam">
-      <input class="p-3 border rounded-md" placeholder="Email" value="sam@example.com">
+      <input class="p-3 border rounded-md" placeholder="Full Name" value="User Login">
+      <input class="p-3 border rounded-md" placeholder="Email" value="user@example.com">
       <input class="p-3 border rounded-md" placeholder="Phone Number" value="+91 9876543210">
       <input class="p-3 border rounded-md" placeholder="City" value="Delhi">
     </div>
-
     <button class="mt-4 px-5 py-2 bg-green-600 text-white rounded-md hover:bg-green-700">
       Save Changes
     </button>
   </div>
-
   <!-- PASSWORD SETTINGS -->
   <div class="bg-white p-6 rounded-xl shadow-card mb-6">
     <h2 class="text-xl font-semibold mb-4">Change Password</h2>
-
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <input type="password" class="p-3 border rounded-md" placeholder="Current Password">
       <input type="password" class="p-3 border rounded-md" placeholder="New Password">
       <input type="password" class="p-3 border rounded-md" placeholder="Confirm New Password">
     </div>
-
     <button class="mt-4 px-5 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">
       Update Password
     </button>
   </div>
-
   <!-- NOTIFICATION SETTINGS -->
   <div class="bg-white p-6 rounded-xl shadow-card">
     <h2 class="text-xl font-semibold mb-4">Notification Preferences</h2>
-
     <label class="flex items-center gap-3 mb-3">
       <input type="checkbox" checked>
       <span>Email Alerts</span>
     </label>
-
     <label class="flex items-center gap-3 mb-3">
       <input type="checkbox" checked>
       <span>Transaction Updates</span>
     </label>
-
     <label class="flex items-center gap-3 mb-3">
       <input type="checkbox">
       <span>Weekly Reports</span>
     </label>
-
     <button class="mt-4 px-5 py-2 bg-green-600 text-white rounded-md hover:bg-green-700">
       Save Preferences
     </button>
   </div>
-
 </main>
 
-<!-- JS -->
 <script>
 document.getElementById("profileBtn").onclick = () => {
   document.getElementById("profileMenu").classList.toggle("hidden");
 };
-
 document.getElementById("sidebarToggle").onclick = () => {
   const el = document.getElementById("mobileSidebar");
   el.style.transform = el.style.transform.includes("0")
     ? "translateX(-100%)"
     : "translateX(0)";
 };
+// Light/Dark Theme Toggle
+(function(){
+  const btn = document.getElementById('themeToggle');
+  function setTheme(dark) {
+    if (dark) {
+      document.body.classList.add('dark-mode');
+      document.documentElement.classList.add('dark-mode');
+      btn.textContent = '☀️';
+    } else {
+      document.body.classList.remove('dark-mode');
+      document.documentElement.classList.remove('dark-mode');
+      btn.textContent = '🌙';
+    }
+  }
+  const darkSaved = localStorage.getItem('theme') === 'dark';
+  setTheme(darkSaved);
+  btn.addEventListener('click', function(){
+    const dark = !document.body.classList.contains('dark-mode');
+    setTheme(dark);
+    localStorage.setItem('theme', dark ? 'dark' : 'light');
+  });
+})();
 </script>
-
 </body>
 </html>
