--- a/analytics-reports.html
+++ b/analytics-reports.html
@@ -6,15 +6,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 <style>
-body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
+body { background: #f7f9fb; font-family: 'Inter', sans-serif; transition: background 0.3s, color 0.3s;}
 .sidebar-item:hover { background: #eef3ff; }
 .active-item { background: #e0e7ff !important; font-weight: 600; }
 .shadow-card { box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
 #mobileSidebar { transition: transform 0.3s ease; }
+/* Dark mode styles */
+body.dark-mode, html.dark-mode { background: #101820 !important; color: #f3f7f6 !important; }
+body.dark-mode .bg-white, body.dark-mode .bg-gray-50 {
+  background: #192432 !important; color: #f3f7f6 !important;
+}
+body.dark-mode .sidebar-item, body.dark-mode aside, body.dark-mode .shadow-card { background: #1b2532 !important; color: #eafaf2 !important; }
+body.dark-mode nav, body.dark-mode .border-b, body.dark-mode .border-r, body.dark-mode aside { background: #151d27 !important; border-color: #29404f !important; }
+body.dark-mode h1, body.dark-mode h2, body.dark-mode h3, body.dark-mode .font-bold, body.dark-mode .font-semibold { color: #4be5bc !important; }
+body.dark-mode .text-gray-500, body.dark-mode .text-gray-400 { color: #b6e0d9 !important; }
+body.dark-mode table, body.dark-mode th, body.dark-mode td { background: transparent !important; color: #eafaf2 !important; }
+body.dark-mode .text-green-700 { color: #15fa92 !important;}
+body.dark-mode .text-yellow-600 { color: #ecc94b !important;}
+body.dark-mode .text-blue-800 { color: #27f5fe !important;}
+body.dark-mode .bg-gray-100 { background: #232a39 !important;}
+body.dark-mode .border-gray-200 { border-color: #2b3741 !important;}
+body.dark-mode .bg-gray-200 { background: #23344a !important;}
+body.dark-mode .active-item { background: #203341 !important;}
+body.dark-mode .p-5, body.dark-mode .p-6 { background: #182430 !important;}
+#themeToggle {margin-left: 1rem;}
+#themeToggle:hover { background: #b0ffd5; color: #1e6642;}
+body.dark-mode #themeToggle:hover { background: #22e28d; color:#1a232d;}
 </style>
-
 </head>
 <body class="text-gray-800">
 
@@ -22,29 +41,29 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
 <nav class="w-full bg-white border-b fixed top-0 left-0 z-50 shadow-sm">
   <div class="max-w-7xl mx-auto px-6">
     <div class="flex items-center justify-between h-16">
-
       <!-- Back Button -->
       <a href="marketplace.html" class="text-sm px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-md flex items-center gap-2">
         ◀ Back to Marketplace
       </a>
-
       <!-- Search -->
       <div class="hidden md:flex items-center w-1/3">
         <input type="text" placeholder="Search analytics..." class="w-full px-4 py-2 rounded-md bg-gray-100 border border-gray-200">
       </div>
-
       <div class="flex items-center gap-6">
         <button class="relative">
           <span>🔔</span>
           <span class="absolute -top-1 -right-1 w-3 h-3 bg-red-600 rounded-full"></span>
         </button>
-
         <div class="relative">
           <button id="profileBtn" class="flex items-center gap-2">
-            <img src="https://i.pravatar.cc/150?img=32" class="w-9 h-9 rounded-full">
-            <span class="font-medium">Sam</span>
+            <span class="w-9 h-9 rounded-full bg-gray-200 flex items-center justify-center">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" class="w-7 h-7 text-gray-500" stroke-width="1.8">
+                <circle cx="12" cy="8" r="4" />
+                <path d="M4 20c0-3.5 3.7-6 8-6s8 2.5 8 6" />
+              </svg>
+            </span>
+            <span class="font-medium">User Login</span>
           </button>
-
           <div id="profileMenu" class="hidden absolute right-0 mt-2 bg-white border rounded-lg shadow-lg w-48">
             <a href="account-settings.html" class="block px-4 py-2 hover:bg-gray-100">Profile Settings</a>
             <a href="account-settings.html" class="block px-4 py-2 hover:bg-gray-100">Account Settings</a>
@@ -52,10 +71,11 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
             <a href="#" class="block px-4 py-2 hover:bg-gray-100 text-red-600">Logout</a>
           </div>
         </div>
-
+        <!-- Light/Dark Theme Toggle -->
+        <button id="themeToggle" class="px-3 py-2 rounded-full border text-xl border-green-500 bg-white hover:bg-green-100 focus:outline-none transition" aria-label="Theme Toggle">🌙</button>
+        <!-- Mobile Sidebar Button -->
         <button id="sidebarToggle" class="lg:hidden px-3 py-2 bg-gray-100 rounded-md">☰</button>
       </div>
-
     </div>
   </div>
 </nav>
@@ -86,63 +106,49 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
 
 <!-- MAIN CONTENT -->
 <main class="ml-0 lg:ml-64 pt-24 px-6 pb-12">
-
   <h1 class="text-2xl font-bold mb-6">Analytics & Reports</h1>
-
   <!-- SUMMARY CARDS -->
   <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-10">
-
     <div class="p-5 bg-white rounded-xl shadow-card">
       <h3 class="text-sm text-gray-500">Total Revenue</h3>
       <p class="text-3xl font-bold mt-2">₹1,42,500</p>
     </div>
-
     <div class="p-5 bg-white rounded-xl shadow-card">
       <h3 class="text-sm text-gray-500">Total Buyers</h3>
       <p class="text-3xl font-bold mt-2">42</p>
     </div>
-
     <div class="p-5 bg-white rounded-xl shadow-card">
       <h3 class="text-sm text-gray-500">Completed Deals</h3>
       <p class="text-3xl font-bold mt-2">58</p>
     </div>
-
     <div class="p-5 bg-white rounded-xl shadow-card">
       <h3 class="text-sm text-gray-500">Active Waste Types</h3>
       <p class="text-3xl font-bold mt-2">16</p>
     </div>
-
   </div>
-
   <!-- CHARTS GRID -->
   <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-
     <!-- Line Chart -->
     <div class="bg-white p-6 rounded-xl shadow-card">
       <h3 class="font-semibold text-sm mb-4">Monthly Transactions</h3>
       <canvas id="lineChart"></canvas>
     </div>
-
     <!-- Bar Chart -->
     <div class="bg-white p-6 rounded-xl shadow-card">
       <h3 class="font-semibold text-sm mb-4">Category-wise Volume</h3>
       <canvas id="barChart"></canvas>
     </div>
-
     <!-- Pie Chart -->
     <div class="bg-white p-6 rounded-xl shadow-card">
       <h3 class="font-semibold text-sm mb-4">Earnings Split</h3>
       <canvas id="pieChart"></canvas>
     </div>
-
     <!-- Doughnut Chart -->
     <div class="bg-white p-6 rounded-xl shadow-card">
       <h3 class="font-semibold text-sm mb-4">Stock Status</h3>
       <canvas id="donutChart"></canvas>
     </div>
-
   </div>
-
 </main>
 
 <!-- JS -->
@@ -156,6 +162,28 @@ document.getElementById("sidebarToggle").onclick = () => {
     ? "translateX(-100%)"
     : "translateX(0)";
 };
+/* LIGHT/DARK THEME TOGGLE */
+(function(){
+  const btn = document.getElementById('themeToggle');
+  function setTheme(dark) {
+    if (dark) {
+      document.body.classList.add('dark-mode');
+      document.documentElement.classList.add('dark-mode');
+      btn.textContent = '☀️';
+    } else {
+      document.body.classList.remove('dark-mode');
+      document.documentElement.classList.remove('dark-mode');
+      btn.textContent = '🌙';
+    }
+  }
+  const darkSaved = localStorage.getItem('theme') === 'dark';
+  setTheme(darkSaved);
+  btn.addEventListener('click', function(){
+    const dark = !document.body.classList.contains('dark-mode');
+    setTheme(dark);
+    localStorage.setItem('theme', dark ? 'dark' : 'light');
+  });
+})();
 
 /* CHARTS */
 new Chart(document.getElementById("lineChart"), {
@@ -171,7 +199,6 @@ new Chart(document.getElementById("lineChart"), {
     }]
   }
 });
-
 new Chart(document.getElementById("barChart"), {
   type: "bar",
   data: {
@@ -183,7 +210,6 @@ new Chart(document.getElementById("barChart"), {
     }]
   }
 });
-
 new Chart(document.getElementById("pieChart"), {
   type: "pie",
   data: {
@@ -194,7 +220,6 @@ new Chart(document.getElementById("pieChart"), {
     }]
   }
 });
-
 new Chart(document.getElementById("donutChart"), {
   type: "doughnut",
   data: {
@@ -206,6 +231,5 @@ new Chart(document.getElementById("donutChart"), {
   }
 });
 </script>
-
 </body>
 </html>
