--- a/help-support.html
+++ b/help-support.html
@@ -5,48 +5,57 @@
 <title>Help & Support – Waste2Worth</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.tailwindcss.com"></script>
-
 <style>
 body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
 .sidebar-item:hover { background: #eef3ff; }
 .active-item { background: #e0e7ff !important; font-weight: 600; }
 .shadow-card { box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
 #mobileSidebar { transition: transform 0.3s ease; }
+/* DARK MODE */
+body.dark-mode { background: #0e1625 !important; color: #e2f7ef !important;}
+body.dark-mode .bg-white, body.dark-mode .shadow-card { background: #1b2233 !important; color: #e2f7ef !important;}
+body.dark-mode .border, body.dark-mode .border-b { border-color: #2de5a388 !important;}
+body.dark-mode .sidebar-item:hover { background: #1a2235 !important; }
+body.dark-mode .active-item { background: #1ddfa430 !important; color: #39f5b4 !important; }
+body.dark-mode input, body.dark-mode textarea { background: #26314d !important; color: #eafff6 !important; border-color: #39f5b4 !important;}
+body.dark-mode .bg-gray-100 { background: #203251 !important;}
+body.dark-mode .hover\:bg-gray-100:hover { background: #2bbd70 !important; color: #fff !important;}
+#themeToggleBtn {margin-left: 8px;}
+#themeToggleBtn:hover {background: #cdf8e5; color: #138a4f;}
+body.dark-mode #themeToggleBtn:hover { background: #39fea5; color: #12232b; }
 </style>
-
 </head>
-<body class="text-gray-800">
-
+<body class="text-gray-800 transition-colors duration-300">
 <!-- TOP NAVBAR -->
 <nav class="w-full bg-white border-b fixed top-0 left-0 z-50 shadow-sm">
   <div class="max-w-7xl mx-auto px-6">
     <div class="flex items-center justify-between h-16">
-
       <!-- Back Button -->
       <a href="marketplace.html" class="text-sm px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-md flex items-center gap-2">
         ◀ Back to Marketplace
       </a>
-
       <!-- Search -->
       <div class="hidden md:flex items-center w-1/3">
         <input type="text" placeholder="Search help..." class="w-full px-4 py-2 rounded-md bg-gray-100 border border-gray-200">
       </div>
-
       <!-- Right -->
       <div class="flex items-center gap-6">
-
         <button class="relative">
           <span>🔔</span>
           <span class="absolute -top-1 -right-1 w-3 h-3 bg-red-600 rounded-full"></span>
         </button>
-
         <!-- Profile -->
         <div class="relative">
           <button id="profileBtn" class="flex items-center gap-2">
-            <img src="https://i.pravatar.cc/150?img=32" class="w-9 h-9 rounded-full">
-            <span class="font-medium">Sam</span>
+            <!-- Generic user logo SVG -->
+            <span class="w-9 h-9 inline-flex items-center justify-center rounded-full bg-emerald-200 text-emerald-800">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <circle cx="12" cy="9" r="3" stroke="currentColor" stroke-width="1.5"/>
+                <path stroke="currentColor" stroke-width="1.5" d="M16.2 16a4.2 4.2 0 0 0-8.4 0"/>
+              </svg>
+            </span>
+            <span class="font-medium" id="user-login-name">User Login</span>
           </button>
-
           <div id="profileMenu" class="hidden absolute right-0 mt-2 bg-white border rounded-lg shadow-lg w-48">
             <a href="account-settings.html" class="block px-4 py-2 hover:bg-gray-100">Profile Settings</a>
             <a href="account-settings.html" class="block px-4 py-2 hover:bg-gray-100">Account Settings</a>
@@ -54,7 +63,7 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
             <a href="#" class="block px-4 py-2 hover:bg-gray-100 text-red-600">Logout</a>
           </div>
         </div>
-
+        <button id="themeToggleBtn" class="bg-gray-100 text-xl rounded-full border border-green-600 px-3 py-2 transition hover:bg-green-50" aria-label="Theme toggle">🌙</button>
         <button id="sidebarToggle" class="lg:hidden px-3 py-2 rounded-md bg-gray-100">☰</button>
       </div>
     </div>
@@ -87,57 +96,43 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
 
 <!-- MAIN CONTENT -->
 <main class="ml-0 lg:ml-64 pt-24 px-6 pb-16">
-
   <h1 class="text-2xl font-bold mb-6">Help & Support</h1>
-
   <!-- FAQ SECTION -->
   <div class="bg-white p-6 rounded-xl shadow-card mb-8">
     <h2 class="text-xl font-semibold mb-4">Frequently Asked Questions</h2>
-
     <details class="mb-3">
       <summary class="cursor-pointer font-medium">How do I add a new waste listing?</summary>
       <p class="mt-2 text-gray-600">Go to My Listings → click on “New Listing button” and fill the required details.</p>
     </details>
-
     <details class="mb-3">
       <summary class="cursor-pointer font-medium">How does negotiation work?</summary>
       <p class="mt-2 text-gray-600">Buyers can negotiate price on marketplace cards using chat-style modal.</p>
     </details>
-
     <details class="mb-3">
       <summary class="cursor-pointer font-medium">How do I contact a seller?</summary>
       <p class="mt-2 text-gray-600">After initiating a purchase or negotiation, contact info appears inside chat window.</p>
     </details>
-
     <details class="mb-3">
       <summary class="cursor-pointer font-medium">How do I change my profile info?</summary>
       <p class="mt-2 text-gray-600">Go to Account & Settings page to update your details.</p>
     </details>
-
     <details>
       <summary class="cursor-pointer font-medium">How can I delete my account?</summary>
       <p class="mt-2 text-gray-600">Reach out to support with your registered email for account removal.</p>
     </details>
   </div>
-
   <!-- CONTACT SUPPORT -->
   <div class="bg-white p-6 rounded-xl shadow-card">
     <h2 class="text-xl font-semibold mb-4">Contact Support</h2>
-
     <form class="space-y-4">
       <input class="w-full p-3 border rounded-md" placeholder="Full Name">
       <input class="w-full p-3 border rounded-md" placeholder="Email">
       <textarea class="w-full p-3 border rounded-md" placeholder="Describe your issue" rows="4"></textarea>
-
-      <button class="px-5 py-2 bg-green-600 text-white rounded-md hover:bg-green-700">
-        Submit Query
-      </button>
+      <button class="px-5 py-2 bg-green-600 text-white rounded-md hover:bg-green-700">Submit Query</button>
     </form>
   </div>
-
 </main>
 
-<!-- JS -->
 <script>
 document.getElementById("profileBtn").onclick = () => {
   document.getElementById("profileMenu").classList.toggle("hidden");
@@ -149,7 +144,29 @@ document.getElementById("sidebarToggle").onclick = () => {
     ? "translateX(-100%)"
     : "translateX(0)";
 };
-</script>
 
+// THEME TOGGLE SUPPORT
+(function() {
+  const btn = document.getElementById('themeToggleBtn');
+  function setTheme(dark) {
+    if (dark) {
+      document.body.classList.add('dark-mode');
+      document.documentElement.classList.add('dark-mode');
+      btn.textContent = '☀️';
+    } else {
+      document.body.classList.remove('dark-mode');
+      document.documentElement.classList.remove('dark-mode');
+      btn.textContent = '🌙';
+    }
+  }
+  const darkSaved = localStorage.getItem('theme') === 'dark';
+  setTheme(darkSaved);
+  btn.addEventListener('click', function() {
+    const dark = !document.body.classList.contains('dark-mode');
+    setTheme(dark);
+    localStorage.setItem('theme', dark ? 'dark' : 'light');
+  });
+})();
+</script>
 </body>
 </html>
