--- a/my listing.html
+++ b/my listing.html
@@ -5,50 +5,65 @@
 <title>My Listings – Waste2Worth</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.tailwindcss.com"></script>
-
 <style>
 body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
 .sidebar-item:hover { background: #eef3ff; }
 .active-item { background: #e0e7ff !important; font-weight: 600; }
 .shadow-card { box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
 #mobileSidebar { transition: transform 0.3s ease; }
+/* Dark mode overrides: */
+body.dark-mode, html.dark-mode { background: #101820 !important; color: #eafaf2 !important; }
+body.dark-mode .bg-white, body.dark-mode .bg-gray-50, body.dark-mode .rounded-xl { background: #182430 !important; color: #eafaf2 !important; }
+body.dark-mode .sidebar-item, body.dark-mode aside, body.dark-mode .shadow-card { background: #1b2532 !important; color: #d7e8df !important; }
+body.dark-mode nav, body.dark-mode .border-b, body.dark-mode .border-r, body.dark-mode aside { background: #151d27 !important; border-color: #2d414f !important; }
+body.dark-mode h1, body.dark-mode h2, body.dark-mode h3, body.dark-mode .font-bold { color: #4be5bc !important; }
+body.dark-mode .text-gray-500, body.dark-mode .text-gray-400 { color: #b6e0d9 !important; }
+body.dark-mode table, body.dark-mode th, body.dark-mode td { background: transparent !important; color: #eafaf2 !important; }
+body.dark-mode .text-green-600 { color: #18b78a !important; }
+body.dark-mode .text-yellow-600 { color: #ecc94b !important; }
+body.dark-mode .border-gray-200 { border-color: #23303c !important; }
+body.dark-mode .bg-gray-100 { background: #232a39 !important; }
+body.dark-mode .bg-gray-200 { background: #23344a !important; }
+body.dark-mode .active-item { background: #203341 !important; }
+body.dark-mode .bg-black\/50 { background: #121820cc !important; }
+body.dark-mode .border, body.dark-mode .border-b, body.dark-mode .border-t { border-color: #203d41 !important; }
+#themeToggle {margin-left: 1rem;}
+#themeToggle:hover { background: #b0ffd5; color: #166244;}
+body.dark-mode #themeToggle:hover { background: #22e28d; color:#1a232d;}
 </style>
-
 </head>
-
 <body class="text-gray-800">
 
 <!-- TOP NAVBAR -->
 <nav class="w-full bg-white border-b fixed top-0 left-0 z-50 shadow-sm">
   <div class="max-w-7xl mx-auto px-6">
     <div class="flex items-center justify-between h-16">
-
       <!-- Back Button -->
       <a href="marketplace.html" class="text-sm px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-md flex items-center gap-2">
         ◀ Back to Marketplace
       </a>
-
       <!-- Search -->
       <div class="hidden md:flex items-center w-1/3">
         <input type="text" placeholder="Search listings..." class="w-full px-4 py-2 rounded-md bg-gray-100 border border-gray-200">
       </div>
-
       <!-- Right Side -->
       <div class="flex items-center gap-6">
-
         <!-- Notification -->
         <button class="relative">
           <span class="material-icons text-gray-600">🔔</span>
           <span class="absolute -top-1 -right-1 w-3 h-3 bg-red-600 rounded-full"></span>
         </button>
-
         <!-- Profile -->
         <div class="relative">
           <button id="profileBtn" class="flex items-center gap-2">
-            <img src="https://i.pravatar.cc/150?img=32" class="w-9 h-9 rounded-full">
-            <span class="font-medium">Sam</span>
+            <span class="w-9 h-9 rounded-full bg-gray-200 flex items-center justify-center">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" class="w-7 h-7 text-gray-500" stroke-width="1.8">
+                <circle cx="12" cy="8" r="4" />
+                <path d="M4 20c0-3.5 3.7-6 8-6s8 2.5 8 6" />
+              </svg>
+            </span>
+            <span class="font-medium">User Login</span>
           </button>
-
           <div id="profileMenu" class="hidden absolute right-0 mt-2 bg-white border rounded-lg shadow-lg w-48">
             <a href="account-settings.html" class="block px-4 py-2 hover:bg-gray-100">Profile Settings</a>
             <a href="account-settings.html" class="block px-4 py-2 hover:bg-gray-100">Account Settings</a>
@@ -56,7 +71,8 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
             <a href="#" class="block px-4 py-2 hover:bg-gray-100 text-red-600">Logout</a>
           </div>
         </div>
-
+        <!-- Light/Dark Theme Toggle Button -->
+        <button id="themeToggle" class="px-3 py-2 rounded-full border text-xl border-green-500 bg-white hover:bg-green-100 focus:outline-none transition" aria-label="Theme Toggle">🌙</button>
         <!-- Mobile Sidebar Button -->
         <button id="sidebarToggle" class="lg:hidden px-3 py-2 rounded-md bg-gray-100">☰</button>
       </div>
@@ -90,15 +106,12 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
 
 <!-- MAIN CONTENT -->
 <main class="ml-0 lg:ml-64 pt-24 px-6 pb-12">
-
   <div class="flex items-center justify-between mb-6">
     <h1 class="text-2xl font-bold">My Listings</h1>
-
     <button id="newListingBtn" class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">
       + New Listing
     </button>
   </div>
-
   <!-- LISTINGS TABLE -->
   <div class="bg-white rounded-xl shadow-card overflow-x-auto">
     <table class="w-full">
@@ -126,21 +139,17 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
       </tbody>
     </table>
   </div>
-
 </main>
 
 <!-- NEW LISTING MODAL -->
 <div id="newListingModal" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50">
   <div class="bg-white w-full max-w-lg rounded-xl p-6">
-
     <h2 class="text-xl font-bold mb-4">Create New Listing</h2>
-
     <form class="space-y-4">
       <input class="w-full p-3 border rounded-md" placeholder="Material Name">
       <input class="w-full p-3 border rounded-md" placeholder="Quantity (kg)">
       <input class="w-full p-3 border rounded-md" placeholder="Price (₹/kg)">
       <textarea class="w-full p-3 border rounded-md" placeholder="Description"></textarea>
-
       <div class="flex justify-end gap-3 mt-4">
         <button type="button" id="cancelModal" class="px-4 py-2 bg-gray-200 rounded-md">Cancel</button>
         <button type="submit" class="px-4 py-2 bg-green-600 text-white rounded-md">Create</button>
@@ -154,22 +163,40 @@ body { background: #f7f9fb; font-family: 'Inter', sans-serif; }
 document.getElementById("profileBtn").onclick = () => {
   document.getElementById("profileMenu").classList.toggle("hidden");
 };
-
 document.getElementById("sidebarToggle").onclick = () => {
   const el = document.getElementById("mobileSidebar");
   el.style.transform = el.style.transform.includes("0")
     ? "translateX(-100%)"
     : "translateX(0)";
 };
-
 document.getElementById("newListingBtn").onclick = () => {
   document.getElementById("newListingModal").classList.remove("hidden");
 };
-
 document.getElementById("cancelModal").onclick = () => {
   document.getElementById("newListingModal").classList.add("hidden");
 };
+// Light/Dark Theme Toggle
+(function(){
+  const btn = document.getElementById('themeToggle');
+  function setTheme(dark) {
+    if (dark) {
+      document.body.classList.add('dark-mode');
+      document.documentElement.classList.add('dark-mode');
+      btn.textContent = '☀️';
+    } else {
+      document.body.classList.remove('dark-mode');
+      document.documentElement.classList.remove('dark-mode');
+      btn.textContent = '🌙';
+    }
+  }
+  const darkSaved = localStorage.getItem('theme') === 'dark';
+  setTheme(darkSaved);
+  btn.addEventListener('click', function(){
+    const dark = !document.body.classList.contains('dark-mode');
+    setTheme(dark);
+    localStorage.setItem('theme', dark ? 'dark' : 'light');
+  });
+})();
 </script>
-
 </body>
 </html>
